--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -159,6 +159,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-pale-yellow{color:#000;background-color:#ffffcc}
 .w3-pale-blue{color:#000;background-color:#ddffff}
 .w3-text-white{color:#fff}
+.w3-text-grey{color:#9e9e9e}
 .w3-text-black{color:#000}
 .w3-text-green{color:#4CAF50}
 .w3-text-yellow{color:#ffeb3b}
