--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -221,14 +221,17 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 #maximize{position:absolute; height:min(63px, 9vh); z-index: 20; transition: all 0.5s;}
 #maximize.hide{visibility:hidden; opacity:0;}
 
-#star-table{float:left; transition: all 0.5s;}
-#star-table.minimized {transform: translateY(-45%);}
+.star-table-5p{position:absolute; z-index:10; max-width:40%; min-width:120px;}
+#star-table-5p{transition: all 0.5s;}
+#star-table-5p.minimized {transform: translateY(-45%);}
+#star-table{float:left; transition: all 0.5s; max-width:40%; min-width:120px;}
 
-.star-cell{padding:0.05em 0.3em; flex-grow:1; align-items:center; gap:0.2em;}
+.star-cell{padding:0.05em 0.3em; align-items:center; display:flex; flex-direction:row-reverse;}
+.name-cell{overflow:hidden; flex-grow: 1;}
 
 .donation-button{margin: 8px 16px;}
 
-@media (min-width:1000px){.donation-button{margin:-20%;}}
+@media (min-width:1000px){.donation-button{margin-bottom:-10vh;}}
 
 @media (min-height:680px){.margins-partager{margin:8px;}}
 
@@ -300,7 +303,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .flip-card-back {transform: rotateY(180deg);}
 
 #history.hidden {visibility: hidden; opacity:0;}
-#history {z-index:30;padding-bottom:7em;position:fixed;bottom:0;width:100%;height:100%;overflow:auto;background-color:rgba(0,0,0,0.4);transition: all 0.5s;}
+#history {z-index:30; padding-bottom:7em;position:fixed;bottom:0;width:100%;height:100%;overflow:auto;background-color:rgba(0,0,0,0.4);transition: all 0.5s;}
 
 #history_list.hidden {transform: translateY(-100%);}
 #history_list {margin:auto; position:relative; width:100%; max-width:600px; transition: all 0.8s;}
