--- a/website/templates/partager.jinja
+++ b/website/templates/partager.jinja
@@ -14,13 +14,13 @@
     {% endif %}
     <form method="POST">
       {% for other_player in player.other_players %}
-      <div class="{{ other_player.color }}-light flex-horizontal space-around w3-padding center-items margins-partager">
-        <span style="width:5em"><b>{{ other_player.name }}</b></span>
+      <div class="{{ other_player.color }}-light flex-horizontal space-around w3-padding{{'-small' if game.players|length>7}} center-items margins-partager">
+        <span style="width:5em; overflow:hidden;"><b>{{ other_player.name }}</b></span>
         <input id=sent{{ loop.index0 }} onchange="update_rest()" name={{ other_player.name }} class="w3-input w3-border w3-round-large w3-center" value={{ player.last_profit // engine.players|length }} type="number" style="width:5em; height:1.6em" {% if player.last_profit >= 0 %}min="0"{% endif %} required>
       </div>
       {% endfor %}
-      <div class="{{ player.color }}-light flex-horizontal space-around w3-padding center-items margins-partager">
-        <span style="width:5em;"><b>{{ player.name }}</b></span>
+      <div class="{{ player.color }}-light flex-horizontal space-around w3-padding{{'-small' if game.players|length>7}} center-items margins-partager">
+        <span style="width:5em; overflow:hidden;"><b>{{ player.name }}</b></span>
         <div id="rest" style="width:5em;"></div>
       </div>
         <button type="button" onclick="window.location.href='/'" class="w3-button w3-red" style="margin:10px">{{text["actually no"][player.lang_id]}}</button>
