--- a/website/templates/Jeu5-reveal.jinja
+++ b/website/templates/Jeu5-reveal.jinja
@@ -8,15 +8,16 @@
 {% block donation_button %}{% endblock %}
 {% block content %}
 
-<div class="w3-center w3-white animate__animated animate__fadeIn" style="max-width:340px;">
+{% if engine.players|length <= 5 %}
+<div class="w3-center w3-white animate__animated animate__fadeIn" style="max-width:min(664px,90%);">
   <header class="w3-text-white w3-padding theme-dark-5">
       {{ player.message }}
   </header>
   <div class="w3-margin-top" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:16px">
     {% for other_player in other_players %}
-    <div class="w3-card w3-padding w3-half {{ other_player.color }}-light" style="width:150px; height:150px;">
+    <div class="w3-card w3-padding w3-half {{ other_player.color }}-light" style="width:min(200px,50%);">
       <b class="w3-xlarge w3-padding">{{ other_player.name }}</b>
-      <div class="w3-padding-small w3-text-white {{ other_player.color }}-dark">{{ offer[loop.index0] }}</div>
+      <div class="w3-padding-small w3-text-white {{ other_player.color }}-dark">{{ offer[loop.index0] }} <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin"></div>
       {% if other_player.choice == 0 %}
       <div class="w3-padding-small w3-white w3-text-red">{{text["declined"][player.lang_id]}}</div>
       {% else %}
@@ -31,5 +32,59 @@
       </form>
   </div>
 </div>
+
+{% elif engine.players|length <= 7 %}
+
+<div class="w3-center animate__animated animate__fadeIn" style="max-width:min(600px,90%)">
+  <header class="w3-text-white w3-padding theme-dark-5">
+      {{ player.message }}
+  </header>
+  <div style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap;">
+    {% for other_player in other_players %}
+    <div class="w3-padding w3-half {{ other_player.color }}-light" style="width:min(200px,50%)">
+      <b class="w3-xlarge w3-padding">{{ other_player.name }}</b>
+      <div class="w3-padding-small w3-text-white {{ other_player.color }}-dark">{{ offer[loop.index0] }} <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin"></div>
+      {% if other_player.choice == 0 %}
+      <div class="w3-padding-small w3-white w3-text-red">{{text["declined"][player.lang_id]}}</div>
+      {% else %}
+      <div class="w3-padding-small w3-white w3-text-green">{{text["accepted"][player.lang_id]}}</div>
+      {% endif %}
+    </div>
+    {% endfor %}
+  </div>
+  <div class="w3-center">
+      <form method="POST">
+        <button name="jeu5" value="new_offer" type="submit" class="w3-button w3-padding theme-light-5 full-width small">{{text["new offer"][player.lang_id]}}</button>
+      </form>
+  </div>
+</div>
+
+{% else %}
+
+<div class="w3-center animate__animated animate__fadeIn" style="max-width:min(600px,90%)">
+  <header class="w3-text-white w3-padding theme-dark-5">
+      {{ player.message }}
+  </header>
+  {% for other_player in other_players %}
+  <div class="w3-padding {{ other_player.color }}-light" style="display:flex; justify-content:center;">
+    <div style="display:inline-block"><b class="w3-xlarge w3-padding">{{ other_player.name }}</b></div>
+    <div class="w3-padding-small w3-text-white {{ other_player.color }}-dark" style="display:inline-block">{{ offer[loop.index0] }} <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin"></div>
+    <div class="w3-white w3-center" style="margin:auto; border-radius:50%; width:1.3em; height:1.3em; display:inline-block">
+      {% if other_player.choice == 0 %}
+      <i class="fa fa-times-circle w3-text-red"></i>
+      {% else %}
+      <i class="fa fa-check-circle w3-text-green"></i>
+      {% endif %}
+    </div>
+  </div>
+  {% endfor %}
+  <div class="w3-center">
+      <form method="POST">
+        <button name="jeu5" value="new_offer" type="submit" class="w3-button w3-padding theme-light-5 full-width small">{{text["new offer"][player.lang_id]}}</button>
+      </form>
+  </div>
+</div>
+
+{% endif %}
 
 {% endblock %}
