--- a/website/templates/Jeu4-choix.jinja
+++ b/website/templates/Jeu4-choix.jinja
@@ -13,8 +13,8 @@
   <div class="w3-margin" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:12px">
   {% for prize in prizes %}
     <label value={{ loop.index0 }} class="prize-radio w3-border-0 w3-card large w3-padding-small w3-hover-opacity 
-        {% if prize == 'star' and loop.index0 == prizes|lengh-3  %} w3-text-white 
-        {% elif prize == 'star' and loop.index0 == prizes|lengh-2  %} w3-text-grey 
+        {% if prize == 'star' and loop.index0 == prizes|length-3  %} w3-text-light-grey 
+        {% elif prize == 'star' and loop.index0 == prizes|length-2  %} w3-text-grey 
         {% else %} w3-text-black {% endif %}" style="white-space:nowrap;">
     <input type="radio" name="choice" value={{ loop.index0 }} onchange="update_choice(this)" required/>
     {% if prize == "star" %}
