--- a/website/templates/monitoring-recap.jinja
+++ b/website/templates/monitoring-recap.jinja
@@ -103,7 +103,7 @@
           <tr>
             <td>{{player.name}}</td>
             {% for i in range(3) %}
-              <td {% if engine.games[2].winners[i] == player %} class="green-light" {% endif %}>{{engine.games[2].choices[i][player.ID]}}</td>
+              <td {% if engine.games[2].winners[i][0] == player %} class="green-light" {% endif %}>{{engine.games[2].choices[i][player.ID]}}</td>
             {% endfor %}
           </tr>
         {% endfor %}
@@ -111,7 +111,7 @@
       <p class="recap-txt" style="width:100%">
         In the first round {{engine.games[2].winners[0][0].name}} won {{engine.games[2].winners[0][1]}} <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin"> ({{ engine.games[2].config["prizes"][0] }}*engine.games[2].choices[0][engine.games[2].winners[0][0].ID]).<br>
         In the second round {{engine.games[2].winners[1][0].name}} won {{engine.games[2].winners[1][1]}} <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin"> ({{ engine.games[2].config["prizes"][1] }}*engine.games[2].choices[1][engine.games[2].winners[1][0].ID]).<br>
-        In the third round {{engine.games[2].winners[2][0].name}} won {{engine.games[2].winners[2][1]}} <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin"> ({{ engine.games[2].config["prizes"][2] }}*engine.games[2].choices[2][engine.games[2].winners[2][0].ID]). In addition to that, he is granted 2 Stars.
+        In the third round {{engine.games[2].winners[2]}} won {{engine.games[2].winners[2][1]}} <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin"> ({{ engine.games[2].config["prizes"][2] }}*engine.games[2].choices[2][engine.games[2].winners[2][0].ID]). In addition to that, he is granted 2 Stars.
       </p>
     </div>
   </div>
@@ -185,11 +185,11 @@
           <tr>
             <td>{{player.name}}</td>
             {% for i in range(3) %}
-              {% set prizes = engine.games[4].current_prizes(i,engine.games[4].bonuses[i]) %}
+              {% set prizes = engine.games[4].current_prizes(i, 0) %}
               {% if prizes[engine.games[4].choices[i][player.ID]] == "star" %}
-                <td class="{% if engine.games[4].winners[i] == 1 %} green-light {% else %} red-light {% endif %}" ><i class="fa fa-star {% if engine.games[4].choices[i][player.ID] == prizes|length-3 %}w3-text-black{% elif engine.games[4].choices[i][player.ID] == prizes|length-2 %}w3-text-grey{% else %}w3-text-white{% endif %}" style="position:relative; top:2px;"></i></td>
+                <td class="{% if engine.games[4].winners[i][player.ID] == 1 %} green-light {% else %} red-light {% endif %}" ><i class="fa fa-star {% if engine.games[4].choices[i][player.ID] == prizes|length-3 %}w3-text-black{% elif engine.games[4].choices[i][player.ID] == prizes|length-2 %}w3-text-grey{% else %}w3-text-white{% endif %}" style="position:relative; top:2px;"></i></td>
               {% else %}
-                <td class="{% if engine.games[4].winners[i] == 1 %} green-light {% else %} red-light {% endif %}">{{prizes[engine.games[4].choices[i][player.ID]]}} <img src="/static/images/coin.png" class="coin" alt="Coin"></td>
+                <td class="{% if engine.games[4].winners[i][player.ID] == 1 %} green-light {% else %} red-light {% endif %}">{{prizes[engine.games[4].choices[i][player.ID]]}} <img src="/static/images/coin.png" class="coin" alt="Coin"></td>
               {% endif %}
             {% endfor %}
           </tr>
@@ -214,7 +214,7 @@
         {% for player in engine.players %}
           <tr>
             <td>{{player.name}}</td>
-            <td>{% for stars in range(player.stars) %}<i class="fa fa-star" style="position:relative; top:2px;"></i> {% endfor %}</td>
+            <td>{% for stars in range(engine.games[4].money_log[2][player.ID][1]) %}<i class="fa fa-star" style="position:relative; top:2px;"></i> {% endfor %}</td>
             <td>{% for stars in range(player.stars) %}<i class="fa fa-star" style="position:relative; top:2px;"></i> {% endfor %}</td>
           </tr>
         {% endfor %}
@@ -236,12 +236,13 @@
           <th>Round 2</th>
           <th>Round 3</th>
         </tr>
-        {% for player in engine.players %}
+        {% for player in engine.games[5].other_players %}
+        {% set p_id = loop.index0 %}
           <tr>
             <td>{{player.name}}</td>
             {% for i in range(3) %}
-              <td>{{engine.games[5].propositions[i][player.ID]}} <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin">  
-              {% if engine.games[5].choices[i][player.ID] == 0 %}
+              <td>{{engine.games[5].propositions[i][p_id]}} <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin">  
+              {% if engine.games[5].choices[i][p_id] == 0 %}
               <i class="fa fa-times-circle w3-text-red"></i>
               {% else %}
               <i class="fa fa-check-circle w3-text-green"></i>
@@ -266,7 +267,10 @@
           <tr>
             <td>{{player.name}}</td>
             {% for i in range(5) %}
-              <td>{{engine.games[i].money_log[2][player.ID][0]}} <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin"> {% if engine.games[i].money_log[2][player.ID][1] > 0 %} + {{engine.games[i].money_log[2][player.ID][1]}} <i class="fa fa-star"></i> {% endif %} </td>
+              <td>{{engine.games[i+1].money_log[2][player.ID][0] }}
+              <img src="{{ url_for('static', filename='images/coin.png') }}" class="coin" alt="Coin"> {% if engine.games[i+1].money_log[2][player.ID][1] > 0 %} + 
+              {{engine.games[i+1].money_log[2][player.ID][1]}}
+              <i class="fa fa-star"></i> {% endif %} </td>
             {% endfor %}
           </tr>
         {% endfor %}
