--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -221,7 +221,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 .top-bar{height:min(63px, 9vh); display: flex; flex-direction: row-reverse;}
 
-#maximize{position:absolute; height:min(63px, 9vh); z-index: 20; transition: all 0.5s;}
+#maximize{position:absolute; height:min(63px, 9vh); width:100%; z-index: 20; transition: all 0.5s;}
 #maximize.hide{visibility:hidden; opacity:0;}
 
 .star-table-5p{position:absolute; z-index:10; max-width:40%; min-width:120px;}
@@ -234,13 +234,13 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 .donation-button{margin: 8px 16px;}
 
-@media (min-width:1000px){.donation-button{margin-bottom:-10vh;}}
-
-@media (min-height:680px){.margins-partager{margin:8px;}}
-
 @media (min-width:1000px){
+  .donation-button{margin-bottom:-10vh;}
   .star-cell{padding:8px 16px; gap:0.7em}
 }
+
+@media (min-height:600px){.margins-partager{margin:4px;}}
+@media (min-height:700px){.margins-partager{margin:8px;}}
 
 @media (max-height:700px){
   .star-cell{padding:1px 8px}
@@ -284,8 +284,11 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 }
 
 .card-size {width:150px; height:120px;}
-.card-size-7p {width:100px; height:80px;}
-@media (max-width:350px){.card-size {width:140px; height:110px;}}
+.card-size-7p {width:150px; height:120px;}
+@media (max-height:650px){
+  .card-size {width:140px; height:110px;}
+  .card-size-7p {width:140px; height:100px;}
+}
 .padding-reveal {padding:8px}
 @media (max-width:350px){.padding-reveal {padding:4px}}
 .flip-card-inner {
@@ -319,6 +322,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .flex-vertical {display:flex; flex-direction:column;}
 
 .space-between {justify-content:space-between;}
+.space-evenly {justify-content:space-evenly;}
 .space-around {justify-content:space-around;}
 .center-items{align-items:center}
 
@@ -329,6 +333,7 @@ html {height: 100%;}
 body {height: 100%; justify-content:flex-start;}
 
 .container-jeu-1{max-width:min(90%, 560px); min-width:300px;}
+.container-jeu-4{max-width:min(90%, 450px); min-width:300px;}
 
 .recap-div{display:flex; flex-direction:column; align-items:center}
 .recap-subdiv{width:800px; display:flex; flex-direction:column; align-items:center}
