--- a/website/templates/Jeu4-choix.jinja
+++ b/website/templates/Jeu4-choix.jinja
@@ -1,11 +1,11 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% set prizes = engine.current_game.current_prizes %}
+{% set prizes = engine.current_game.current_prizes() %}
 {% extends "base.jinja" %}
 {% block title %}{{text["game 4"][player.lang_id]}}{% endblock %}
 {% block content %}
 
-<div id="card2" class="w3-card-4 w3-center w3-white w3-text-white animate__animated animate__fadeIn container-jeu-1">
+<div id="card2" class="w3-card-4 w3-center w3-white w3-text-white animate__animated animate__fadeIn container-jeu-4">
 <header class="large w3-padding theme-dark-4">
     {{text["choose prize"][player.lang_id]}}
 </header>
