--- a/website/templates/Jeu5-proposition.jinja
+++ b/website/templates/Jeu5-proposition.jinja
@@ -7,6 +7,8 @@
 {% block donation_button %}{% endblock %}
 {% block content %}
 
+{% if engine.players|length <= 5 %}
+
 <form method="POST" class="w3-card-4 w3-center medium w3-white animate__animated animate__fadeIn" style="width:320px;">
 <header class="w3-text-white w3-padding theme-dark-5">
     {{text["please make an offer"][player.lang_id]}}
@@ -24,6 +26,48 @@
 </div>
 <button type="submit" name="jeu5" value="offer" class="w3-button theme-light-5 full-width">{{text["make offer"][player.lang_id]}}</button>
 </form>
+
+{% elif engine.players|length <= 7 %}
+
+<form method="POST" class="w3-card-4 w3-center medium w3-white animate__animated animate__fadeIn" style="width:320px;">
+<header class="w3-text-white w3-padding theme-dark-5">
+    {{text["please make an offer"][player.lang_id]}}
+</header>
+<div style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap;">
+  {% for other_player in other_players %}
+  <div class="w3-padding {{ other_player.color }}-light" style="width:160px">
+    <b class="w3-xlarge w3-padding">{{ other_player.name }}</b>
+    <input id="offer{{ loop.index0 }}" onchange="update_rest()" class="w3-input w3-border w3-round-large w3-center w3-large" placeholder="{{text['amount'][player.lang_id]}}" name={{ other_player.name }} type="number" style="width:130px;" required>
+  </div>
+  {% endfor %}
+</div>
+<div class="small w3-card w3-margin w3-padding-small {{ player.color }}-light">
+{{text["remaining money 1"][player.lang_id]}} <span id="rest"></span> <img src="/static/images/coin.png" class="coin" alt="Coin"> {{text["remaining money 2"][player.lang_id]}}<br>
+</div>
+<button type="submit" name="jeu5" value="offer" class="w3-button theme-light-5 full-width">{{text["make offer"][player.lang_id]}}</button>
+</form>
+
+{% else %}
+
+<form method="POST" class="w3-card-4 w3-center medium w3-white animate__animated animate__fadeIn" style="width:320px;">
+<header class="w3-text-white w3-padding theme-dark-5">
+    {{text["please make an offer"][player.lang_id]}}
+</header>
+<div class="flex-vertical">
+  {% for other_player in other_players %}
+  <div class="{{ other_player.color }}-light flex-horizontal space-around w3-padding-small center-items margins-partager">
+    <span style="width:5em; overflow:hidden;"><b>{{ other_player.name }}</b></span>
+    <input id="offer{{ loop.index0 }}" onchange="update_rest()" class="w3-input w3-border w3-round-large w3-center w3-large" placeholder="{{text['amount'][player.lang_id]}}" name={{ other_player.name }} type="number" style="width:7em; height:2em" required>
+  </div>
+  {% endfor %}
+</div>
+<div class="w3-card w3-padding-small {{ player.color }}-light margins-partager">
+{{text["remaining money 1"][player.lang_id]}} <span id="rest"></span> <img src="/static/images/coin.png" class="coin" alt="Coin"> {{text["remaining money 2"][player.lang_id]}}<br>
+</div>
+<button type="submit" name="jeu5" value="offer" class="w3-button theme-light-5 full-width">{{text["make offer"][player.lang_id]}}</button>
+</form>
+
+{% endif %}
 
 {% endblock %}
 
